# tanx

./: .gitignore  __init__.py  main.py  play.py  pyproject.toml  run_model.py  start.sh  tank_env.py  test.py  train.py
data/01K7QWV13GB6KTPHXM24C2E337/: index  meta.json
data/01K7QWV13GB6KTPHXM24C2E337/chunks/: 000001
data/01K7R1RPYW0T7NPKK5EAT688H3/: index  meta.json
data/01K7R1RPYW0T7NPKK5EAT688H3/chunks/: 000001
data/chunks_head/: 000001
data/wal/: 00000001
envs/: snake_env.py  tank_env.py
utils/: human_controlled_snake.py  random_actions.py  train.py
