[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tank_env"]

[project]
name = "tank_env"
version = "0.0.1"
requires-python = "<3.12,>=3.11"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "ray[rllib] (>=2.50.0,<3.0.0)",
  "torch (>=2.8.0,<3.0.0)",
  "dotenv (>=0.9.9,<0.10.0)",
]
